# privacy-zig

./: .gitignore  BENCHMARK.md  FEATURE_COMPARISON.md  HACKATHON.md  README.md  build.zig  build.zig.zon
app/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/deposit/: page.tsx
app/src/app/notes/: page.tsx
app/src/app/transfer/: page.tsx
app/src/app/withdraw/: page.tsx
app/src/components/: Header.tsx  WalletProvider.tsx
app/src/lib/: explorer.ts  notes.ts  privacy.ts
app/src/types/: modules.d.ts
cli/: Cargo.toml  README.md
cli/src/: crypto.rs  main.rs  notes.rs  pool.rs  prover.rs
docs/: solana-zklogin-passkey.md  zklogin_spec.md
examples/: anonymous_transfer.zig  use_cases.zig
programs/confidential-transfer/: build.zig.zon
programs/privacy-pool/: build.zig  build.zig.zon
programs/privacy-pool-minimal/: build.zig  build.zig.zon
programs/privacy-pool-minimal/src/: main.zig
programs/privacy-pool-test/: build.zig  build.zig.zon  solana-zig
programs/privacy-pool-test/src/: main.zig
programs/privacy-pool/idl/: privacy_pool.json
programs/privacy-pool/src/: gen_idl.zig  main.zig  syscall_wrappers.zig
relayer/: Cargo.toml
relayer/src/: main.rs
scripts/: benchmark-comparison.ts  debug-witness.ts  deployed-config-v2.json  deployed-config.json  deposit.ts  init-new-program.ts  init-v2.ts  initialize.ts  package-lock.json  package.json  test-deposit.ts  tsconfig.json  withdraw.ts
sdk/typescript/: README.md  package.json  privacy_pool.json  tsconfig.json
sdk/typescript/src/: example.ts  index.ts
src/: root.zig
src/confidential/: mod.zig  stealth_pay.zig
src/crypto/: merkle.zig  mod.zig  pedersen.zig  poseidon.zig
src/nullifier/: mod.zig
src/stealth/: mod.zig
src/transfer/: mod.zig
src/zk/: groth16.zig  mod.zig  privacy_cash_vk.zig
