[package]
name = "privacy-relayer"
version = "0.1.0"
edition = "2021"
description = "Relayer service for privacy-zig anonymous transfers"

[dependencies]
# Solana
solana-sdk = "2.0"
solana-client = "2.0"

# Web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utils
base64 = "0.22"
hex = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
